# zendesk-mcp

./: Dockerfile  Makefile  README.md  changelog.txt  config.py  docker-compose.yml  mcp.json.example  mcp_server.py  mcp_server_http.py  pyproject.toml  requirements.txt  run_mcp.sh  tools.py  tools_extra.py  zendesk_client.py
