[project]
name = "mcp-server-zendesk"
version = "1.0.0"
description = "MCP server providing AI assistants with read/write access to Zendesk"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "mcp>=1.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.scripts]
mcp-server-zendesk = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
